# aperture

./: .codespellignore  .dockerignore  .fossa.yaml  .gitignore  .golangci.yaml  .markdownlintrc  .opsninja.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  .tool-versions  .vale.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  README.md  aperture-agent-v0.0.1-rc.2.tgz  aperture-agent-v0.0.1.tgz  aperture-agent-v0.10.0-rc.1.tgz  aperture-agent-v0.10.0-rc.2.tgz  aperture-agent-v0.10.0.tgz  aperture-agent-v0.11.0-rc.1.tgz  aperture-agent-v0.11.0-rc.2.tgz  aperture-agent-v0.11.0.tgz  aperture-agent-v0.11.1-rc.1.tgz  aperture-agent-v0.11.1.tgz  aperture-agent-v0.11.2-rc.1.tgz  aperture-agent-v0.11.2.tgz  aperture-agent-v0.12.0-rc.1.tgz  aperture-agent-v0.12.0-rc.2.tgz  aperture-agent-v0.12.0.tgz  aperture-agent-v0.12.1-rc.1.tgz  aperture-agent-v0.12.1.tgz  aperture-agent-v0.13.0-rc.1.tgz  aperture-agent-v0.13.0-rc.2.tgz  aperture-agent-v0.13.0.tgz  aperture-agent-v0.13.1-rc.1.tgz  aperture-agent-v0.13.1.tgz  (+918 more)
sdks/aperture-py/: README.md  pyproject.toml
sdks/aperture-py/.circleci/: config.yml  continue-workflows.yml
sdks/aperture-py/aperture_sdk/: __init__.py  cache.py  client.py  client_async.py  client_common.py  const.py  flow.py  flow_async.py  flow_common.py  utils.py
sdks/aperture-py/docs/: all-documents.html  aperture_sdk.ApertureClient.html  aperture_sdk.Flow.html  aperture_sdk.FlowParams.html  aperture_sdk.FlowStatus.html  aperture_sdk._gen.__pycache__.html  aperture_sdk._gen.aperture.__pycache__.html  aperture_sdk._gen.aperture.flowcontrol.check.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.check_pb2.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.check_pb2_grpc.FlowControlService.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.check_pb2_grpc.FlowControlServiceServicer.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.check_pb2_grpc.FlowControlServiceStub.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.check_pb2_grpc.html  aperture_sdk._gen.aperture.flowcontrol.check.v1.html  aperture_sdk._gen.aperture.flowcontrol.html  aperture_sdk._gen.aperture.html  aperture_sdk._gen.html  aperture_sdk.cache.KeyDeleteResponse.html  aperture_sdk.cache.KeyLookupResponse.html  aperture_sdk.cache.KeyUpsertResponse.html  aperture_sdk.cache.LookupStatus.html  aperture_sdk.cache.html  aperture_sdk.client.ApertureClient.html  aperture_sdk.client.ApertureCloudAuthMetadataPlugin.html  aperture_sdk.client.FlowParams.html  aperture_sdk.client.html  aperture_sdk.client_async.ApertureClientAsync.html  aperture_sdk.client_async.html  aperture_sdk.client_common.ApertureCloudAuthMetadataPlugin.html  aperture_sdk.client_common.FlowParams.html  aperture_sdk.client_common.html  aperture_sdk.const.html  aperture_sdk.flow.EndResponse.html  aperture_sdk.flow.Flow.html  aperture_sdk.flow.FlowDecision.html  aperture_sdk.flow.html  (+17 more)
(+5596 files in other folders)
